[gd_scene load_steps=2 format=3 uid="uid://dymrhsaqqai34"]

[ext_resource type="Script" path="res://src/UI/user_interface.gd" id="1_hf5fa"]

[node name="UserInterface" type="CanvasLayer"]
script = ExtResource("1_hf5fa")

[node name="LevelLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.05
anchor_bottom = 0.05
offset_right = 534.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 48
text = "Level: %s"

[node name="GoalLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.15
anchor_right = 0.05
anchor_bottom = 0.15
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 48
text = "Your goal is exactly: %s"

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.25
anchor_right = 0.05
anchor_bottom = 0.25
theme_override_font_sizes/font_size = 48
text = "Score: %s"
